--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.61.0",
+    "sass": "^1.70.0",
     "vite": "^4.2.0"
   },
   "dependencies": {
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "swiper": "^10.2.0"
   }
 }
